@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -17,6 +17,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.nio.file.Files;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -30,7 +31,6 @@ import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.servlet.Servlet;
@@ -102,7 +102,7 @@ public class AudioServlet extends HttpServlet implements AudioHTTPServer {
 
     @Deactivate
     protected synchronized void deactivate() {
-        servedStreams.values().stream().map(streamServed -> streamServed.audioStream()).forEach(this::tryClose);
+        servedStreams.values().stream().map(StreamServed::audioStream).forEach(this::tryClose);
         servedStreams.clear();
     }
 
@@ -171,7 +171,7 @@ public class AudioServlet extends HttpServlet implements AudioHTTPServer {
         final String streamId = substringBefore(substringAfterLast(requestURI, "/"), ".");
 
         List<String> acceptedMimeTypes = Stream.of(Objects.requireNonNullElse(req.getHeader("Accept"), "").split(","))
-                .map(String::trim).collect(Collectors.toList());
+                .map(String::trim).toList();
 
         StreamServed servedStream = servedStreams.get(streamId);
         if (servedStream == null) {
@@ -218,7 +218,7 @@ public class AudioServlet extends HttpServlet implements AudioHTTPServer {
         long now = System.nanoTime();
         final List<String> toRemove = servedStreams.entrySet().stream()
                 .filter(e -> e.getValue().timeout().get() < now && e.getValue().currentlyServedStream().get() <= 0)
-                .map(Entry::getKey).collect(Collectors.toList());
+                .map(Entry::getKey).toList();
 
         toRemove.forEach(streamId -> {
             // the stream has expired and no one is using it, we need to remove it!
@@ -297,7 +297,7 @@ public class AudioServlet extends HttpServlet implements AudioHTTPServer {
             clonableAudioStreamResult = new ByteArrayAudioStream(dataBytes, stream.getFormat());
         } else {
             // in memory max size exceeded, sound is too long, we will use a file
-            File tempFile = File.createTempFile(streamId, ".snd");
+            File tempFile = Files.createTempFile(streamId, ".snd").toFile();
             tempFile.deleteOnExit();
             try (OutputStream outputStream = new FileOutputStream(tempFile)) {
                 // copy already read data to file :
