@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -39,7 +39,7 @@ public class DiscoveryResultImpl implements DiscoveryResult {
     private @NonNullByDefault({}) ThingUID thingUID;
     private @Nullable ThingTypeUID thingTypeUID;
 
-    private Map<String, Object> properties = Collections.emptyMap();
+    private Map<String, Object> properties = Map.of();
     private @Nullable String representationProperty;
     private @NonNullByDefault({}) DiscoveryResultFlag flag;
     private @NonNullByDefault({}) String label;
@@ -82,7 +82,7 @@ public class DiscoveryResultImpl implements DiscoveryResult {
         this.thingUID = thingUID;
         this.thingTypeUID = thingTypeUID;
         this.bridgeUID = bridgeUID;
-        this.properties = properties == null ? Collections.emptyMap() : Collections.unmodifiableMap(properties);
+        this.properties = properties == null ? Map.of() : Collections.unmodifiableMap(properties);
         this.representationProperty = representationProperty;
         this.label = label == null ? "" : label;
 
