@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -13,13 +13,11 @@
 package org.openhab.core.model.thing.internal;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
@@ -31,6 +29,8 @@ import org.openhab.core.thing.ChannelUID;
 import org.openhab.core.thing.link.ItemChannelLink;
 import org.openhab.core.thing.link.ItemChannelLinkProvider;
 import org.osgi.service.component.annotations.Component;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * {@link GenericItemChannelLinkProvider} link items to channel by reading bindings with type "channel".
@@ -43,7 +43,8 @@ import org.osgi.service.component.annotations.Component;
 public class GenericItemChannelLinkProvider extends AbstractProvider<ItemChannelLink>
         implements BindingConfigReader, ItemChannelLinkProvider {
 
-    /** caches binding configurations. maps itemNames to {@link BindingConfig}s */
+    private final Logger logger = LoggerFactory.getLogger(GenericItemChannelLinkProvider.class);
+    /** caches binding configurations. maps itemNames to {@link ItemChannelLink}s */
     protected Map<String, Set<ItemChannelLink>> itemChannelLinkMap = new ConcurrentHashMap<>();
 
     /**
@@ -115,7 +116,7 @@ public class GenericItemChannelLinkProvider extends AbstractProvider<ItemChannel
             logger.warn("There already is an update transaction for generic item channel links. Continuing anyway.");
         }
         Set<String> previous = contextMap.get(context);
-        previousItemNames = previous != null ? new HashSet<>(previous) : Collections.emptySet();
+        previousItemNames = previous != null ? new HashSet<>(previous) : new HashSet<>();
     }
 
     @Override
@@ -139,6 +140,6 @@ public class GenericItemChannelLinkProvider extends AbstractProvider<ItemChannel
 
     @Override
     public Collection<ItemChannelLink> getAll() {
-        return itemChannelLinkMap.values().stream().flatMap(Collection::stream).collect(Collectors.toList());
+        return itemChannelLinkMap.values().stream().flatMap(Collection::stream).toList();
     }
 }
