@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -24,8 +24,10 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Objects;
 import java.util.Set;
+import java.util.WeakHashMap;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.ScheduledFuture;
@@ -116,6 +118,8 @@ public class VoiceManagerImpl implements VoiceManager, ConfigOptionProvider, Dia
     private final Map<String, TTSService> ttsServices = new HashMap<>();
     private final Map<String, HumanLanguageInterpreter> humanLanguageInterpreters = new HashMap<>();
 
+    private final WeakHashMap<String, DialogContext> activeDialogGroups = new WeakHashMap<>();
+
     private final LocaleProvider localeProvider;
     private final AudioManager audioManager;
     private final EventPublisher eventPublisher;
@@ -188,10 +192,11 @@ public class VoiceManagerImpl implements VoiceManager, ConfigOptionProvider, Dia
             this.defaultVoice = config.containsKey(CONFIG_DEFAULT_VOICE) ? config.get(CONFIG_DEFAULT_VOICE).toString()
                     : null;
 
-            for (String key : config.keySet()) {
+            for (Entry<String, Object> entry : config.entrySet()) {
+                String key = entry.getKey();
                 if (key.startsWith(CONFIG_PREFIX_DEFAULT_VOICE)) {
                     String tts = key.substring(CONFIG_PREFIX_DEFAULT_VOICE.length());
-                    defaultVoices.put(tts, config.get(key).toString());
+                    defaultVoices.put(tts, entry.getValue().toString());
                 }
             }
         }
@@ -497,7 +502,7 @@ public class VoiceManagerImpl implements VoiceManager, ConfigOptionProvider, Dia
 
     @Override
     public List<DialogContext> getDialogsContexts() {
-        return dialogProcessors.values().stream().map(DialogProcessor::getContext).collect(Collectors.toList());
+        return dialogProcessors.values().stream().map(DialogProcessor::getContext).toList();
     }
 
     @Override
@@ -526,7 +531,8 @@ public class VoiceManagerImpl implements VoiceManager, ConfigOptionProvider, Dia
             if (processor == null) {
                 logger.debug("Starting a new dialog for source {} ({})", context.source().getLabel(null),
                         context.source().getId());
-                processor = new DialogProcessor(context, this, this.eventPublisher, this.i18nProvider, b);
+                processor = new DialogProcessor(context, this, this.eventPublisher, this.activeDialogGroups,
+                        this.i18nProvider, b);
                 dialogProcessors.put(context.source().getId(), processor);
                 processor.start();
             } else {
@@ -582,7 +588,8 @@ public class VoiceManagerImpl implements VoiceManager, ConfigOptionProvider, Dia
                 isSingleDialog = true;
                 activeProcessor = singleDialogProcessors.get(audioSource.getId());
             }
-            var processor = new DialogProcessor(context, this, this.eventPublisher, this.i18nProvider, b);
+            var processor = new DialogProcessor(context, this, this.eventPublisher, this.activeDialogGroups,
+                    this.i18nProvider, b);
             if (activeProcessor == null) {
                 logger.debug("Executing a simple dialog for source {} ({})", audioSource.getLabel(null),
                         audioSource.getId());
@@ -660,7 +667,7 @@ public class VoiceManagerImpl implements VoiceManager, ConfigOptionProvider, Dia
     }
 
     protected void removeAudioSink(AudioSink audioSink) {
-        stopDialogs((dialog) -> dialog.dialogContext.sink().getId().equals(audioSink.getId()));
+        stopDialogs(dialog -> dialog.dialogContext.sink().getId().equals(audioSink.getId()));
     }
 
     @Reference(cardinality = ReferenceCardinality.MULTIPLE, policy = ReferencePolicy.DYNAMIC)
@@ -669,7 +676,7 @@ public class VoiceManagerImpl implements VoiceManager, ConfigOptionProvider, Dia
     }
 
     protected void removeAudioSource(AudioSource audioSource) {
-        stopDialogs((dialog) -> dialog.dialogContext.source().getId().equals(audioSource.getId()));
+        stopDialogs(dialog -> dialog.dialogContext.source().getId().equals(audioSource.getId()));
     }
 
     @Reference(cardinality = ReferenceCardinality.MULTIPLE, policy = ReferencePolicy.DYNAMIC)
@@ -680,7 +687,7 @@ public class VoiceManagerImpl implements VoiceManager, ConfigOptionProvider, Dia
 
     protected void removeKSService(KSService ksService) {
         this.ksServices.remove(ksService.getId());
-        stopDialogs((dialog) -> {
+        stopDialogs(dialog -> {
             var ks = dialog.dialogContext.ks();
             return ks != null && ks.getId().equals(ksService.getId());
         });
@@ -694,7 +701,7 @@ public class VoiceManagerImpl implements VoiceManager, ConfigOptionProvider, Dia
 
     protected void removeSTTService(STTService sttService) {
         this.sttServices.remove(sttService.getId());
-        stopDialogs((dialog) -> dialog.dialogContext.stt().getId().equals(sttService.getId()));
+        stopDialogs(dialog -> dialog.dialogContext.stt().getId().equals(sttService.getId()));
     }
 
     @Reference(cardinality = ReferenceCardinality.MULTIPLE, policy = ReferencePolicy.DYNAMIC)
@@ -705,7 +712,7 @@ public class VoiceManagerImpl implements VoiceManager, ConfigOptionProvider, Dia
 
     protected void removeTTSService(TTSService ttsService) {
         this.ttsServices.remove(ttsService.getId());
-        stopDialogs((dialog) -> dialog.dialogContext.tts().getId().equals(ttsService.getId()));
+        stopDialogs(dialog -> dialog.dialogContext.tts().getId().equals(ttsService.getId()));
     }
 
     @Reference(cardinality = ReferenceCardinality.MULTIPLE, policy = ReferencePolicy.DYNAMIC)
@@ -716,7 +723,7 @@ public class VoiceManagerImpl implements VoiceManager, ConfigOptionProvider, Dia
 
     protected void removeHumanLanguageInterpreter(HumanLanguageInterpreter humanLanguageInterpreter) {
         this.humanLanguageInterpreters.remove(humanLanguageInterpreter.getId());
-        stopDialogs((dialog) -> dialog.dialogContext.hlis().stream()
+        stopDialogs(dialog -> dialog.dialogContext.hlis().stream()
                 .anyMatch(hli -> hli.getId().equals(humanLanguageInterpreter.getId())));
     }
 
@@ -895,30 +902,27 @@ public class VoiceManagerImpl implements VoiceManager, ConfigOptionProvider, Dia
                 case CONFIG_DEFAULT_HLI:
                     return humanLanguageInterpreters.values().stream()
                             .sorted((hli1, hli2) -> hli1.getLabel(locale).compareToIgnoreCase(hli2.getLabel(locale)))
-                            .map(hli -> new ParameterOption(hli.getId(), hli.getLabel(locale)))
-                            .collect(Collectors.toList());
+                            .map(hli -> new ParameterOption(hli.getId(), hli.getLabel(locale))).toList();
                 case CONFIG_DEFAULT_KS:
                     return ksServices.values().stream()
                             .sorted((ks1, ks2) -> ks1.getLabel(locale).compareToIgnoreCase(ks2.getLabel(locale)))
-                            .map(ks -> new ParameterOption(ks.getId(), ks.getLabel(locale)))
-                            .collect(Collectors.toList());
+                            .map(ks -> new ParameterOption(ks.getId(), ks.getLabel(locale))).toList();
                 case CONFIG_DEFAULT_STT:
                     return sttServices.values().stream()
                             .sorted((stt1, stt2) -> stt1.getLabel(locale).compareToIgnoreCase(stt2.getLabel(locale)))
-                            .map(stt -> new ParameterOption(stt.getId(), stt.getLabel(locale)))
-                            .collect(Collectors.toList());
+                            .map(stt -> new ParameterOption(stt.getId(), stt.getLabel(locale))).toList();
                 case CONFIG_DEFAULT_TTS:
                     return ttsServices.values().stream()
                             .sorted((tts1, tts2) -> tts1.getLabel(locale).compareToIgnoreCase(tts2.getLabel(locale)))
-                            .map(tts -> new ParameterOption(tts.getId(), tts.getLabel(locale)))
-                            .collect(Collectors.toList());
+                            .map(tts -> new ParameterOption(tts.getId(), tts.getLabel(locale))).toList();
                 case CONFIG_DEFAULT_VOICE:
                     Locale nullSafeLocale = locale != null ? locale : localeProvider.getLocale();
-                    return getAllVoicesSorted(nullSafeLocale).stream().filter(v -> getTTS(v) != null)
-                            .map(v -> new ParameterOption(v.getUID(),
-                                    String.format("%s - %s - %s", getTTS(v).getLabel(nullSafeLocale),
-                                            v.getLocale().getDisplayName(nullSafeLocale), v.getLabel())))
-                            .collect(Collectors.toList());
+                    return getAllVoicesSorted(nullSafeLocale)
+                            .stream().filter(v -> getTTS(v) != null).map(
+                                    v -> new ParameterOption(v.getUID(),
+                                            String.format("%s - %s - %s", getTTS(v).getLabel(nullSafeLocale),
+                                                    v.getLocale().getDisplayName(nullSafeLocale), v.getLabel())))
+                            .toList();
             }
         }
         return null;
@@ -970,6 +974,8 @@ public class VoiceManagerImpl implements VoiceManager, ConfigOptionProvider, Dia
                                 .withVoice(getVoice(dr.voiceId)) //
                                 .withHLIs(getHLIsByIds(dr.hliIds)) //
                                 .withLocale(dr.locale) //
+                                .withDialogGroup(dr.dialogGroup) //
+                                .withLocationItem(dr.locationItem) //
                                 .withListeningItem(dr.listeningItem) //
                                 .withMelody(dr.listeningMelody) //
                                 .build());
