@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -13,7 +13,6 @@
 package org.openhab.core.common;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -33,10 +32,10 @@ public abstract class AbstractUID {
     private String uid = "";
 
     /**
-     * Constructor must be public, otherwise it can not be called by subclasses from another package.
+     * Constructor must be protected, otherwise it can not be called by subclasses from another package.
      */
-    public AbstractUID() {
-        segments = Collections.emptyList();
+    protected AbstractUID() {
+        segments = List.of();
     }
 
     /**
@@ -45,7 +44,7 @@ public abstract class AbstractUID {
      *
      * @param uid uid in form a string
      */
-    public AbstractUID(String uid) {
+    protected AbstractUID(String uid) {
         this(splitToSegments(uid));
         this.uid = uid;
     }
@@ -55,7 +54,7 @@ public abstract class AbstractUID {
      *
      * @param segments the id segments
      */
-    public AbstractUID(final String... segments) {
+    protected AbstractUID(final String... segments) {
         this(Arrays.asList(segments));
     }
 
@@ -64,7 +63,7 @@ public abstract class AbstractUID {
      *
      * @param segments segments
      */
-    public AbstractUID(List<String> segments) {
+    protected AbstractUID(List<String> segments) {
         int minNumberOfSegments = getMinimalNumberOfSegments();
         int numberOfSegments = segments.size();
         if (numberOfSegments < minNumberOfSegments) {
