@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -19,7 +19,6 @@ import java.math.BigInteger;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -111,7 +110,7 @@ public class MetadataStateDescriptionFragmentProvider implements StateDescriptio
                                 } else {
                                     return new StateOption(o.trim(), null);
                                 }
-                            }).collect(Collectors.toList());
+                            }).toList();
                     builder.withOptions(stateOptions);
                 }
 
