@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -247,8 +247,7 @@ public class GroupItem extends GenericItem implements StateChangeListener, Metad
                     acceptedDataTypes.retainAll(item.getAcceptedDataTypes());
                 }
             }
-            return acceptedDataTypes == null ? Collections.unmodifiableList(Collections.EMPTY_LIST)
-                    : Collections.unmodifiableList(acceptedDataTypes);
+            return acceptedDataTypes == null ? List.of() : Collections.unmodifiableList(acceptedDataTypes);
         }
     }
 
@@ -274,8 +273,7 @@ public class GroupItem extends GenericItem implements StateChangeListener, Metad
                     acceptedCommandTypes.retainAll(item.getAcceptedCommandTypes());
                 }
             }
-            return acceptedCommandTypes == null ? Collections.unmodifiableList(Collections.EMPTY_LIST)
-                    : Collections.unmodifiableList(acceptedCommandTypes);
+            return acceptedCommandTypes == null ? List.of() : Collections.unmodifiableList(acceptedCommandTypes);
         }
     }
 
@@ -344,13 +342,13 @@ public class GroupItem extends GenericItem implements StateChangeListener, Metad
         if (!getTags().isEmpty()) {
             sb.append(", ");
             sb.append("Tags=[");
-            sb.append(getTags().stream().collect(Collectors.joining(", ")));
+            sb.append(String.join(", ", getTags()));
             sb.append("]");
         }
         if (!getGroupNames().isEmpty()) {
             sb.append(", ");
             sb.append("Groups=[");
-            sb.append(getGroupNames().stream().collect(Collectors.joining(", ")));
+            sb.append(String.join(", ", getGroupNames()));
             sb.append("]");
         }
         sb.append(")");
